Find Missing Files operator corrects the sound file path but the sound strip doesn't work until it is updated #101326

Closed
opened 2022-09-24 14:08:25 +02:00 by AnityEx · 9 comments

Simplified Report

  • Add a sound strip in a new file and save it.
  • Move the source sound file into a new directory.
  • Open the file again and use the Find Missing Files operator to find the sound file in the directory.
  • The operator corrects the path, but the sound strip doesn't work.
  • Updating the strip by resetting its source path make it works again.

Original Report

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1060 3GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 517.40

Blender Version
Broken: version: 3.4.0 Alpha, branch: master, commit date: 2022-09-09 22:58, hash: 352d55b1c8
Worked: don't know

Short description of error
i moved some audio files after doing a video inside blender and expected to reconnect them with "find missing files", but there wasn't any way to connect the audio files back as blender didn't take into account sound files for some reason, haven't tried sequences or video, i just moved some sound effects anyway

Exact steps for others to reproduce the error
open the video editor and add any wav or mp3
save and close blender
move the file somewhere else
open again and try to use find missing files
it doesn't work

## Simplified Report - Add a sound strip in a new file and save it. - Move the source sound file into a new directory. - Open the file again and use the Find Missing Files operator to find the sound file in the directory. - The operator corrects the path, but the sound strip doesn't work. - Updating the strip by resetting its source path make it works again. ## Original Report **System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1060 3GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 517.40 **Blender Version** Broken: version: 3.4.0 Alpha, branch: master, commit date: 2022-09-09 22:58, hash: `352d55b1c8` Worked: don't know **Short description of error** i moved some audio files after doing a video inside blender and expected to reconnect them with "find missing files", but there wasn't any way to connect the audio files back as blender didn't take into account sound files for some reason, haven't tried sequences or video, i just moved some sound effects anyway **Exact steps for others to reproduce the error** open the video editor and add any wav or mp3 save and close blender move the file somewhere else open again and try to use find missing files it doesn't work
Author

Added subscriber: @AnityEx

Added subscriber: @AnityEx
Member

Added subscriber: @OmarEmaraDev

Added subscriber: @OmarEmaraDev
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

It seems the operator works correctly and finds the new path, but the sound strip is in a bad state somehow and needs to be tagged for an update or something similar.
Changing the source path of the sound to the same path by clicking on the field and pressing enter with no changes make the sound strip work again.

It seems the operator works correctly and finds the new path, but the sound strip is in a bad state somehow and needs to be tagged for an update or something similar. Changing the source path of the sound to the same path by clicking on the field and pressing enter with no changes make the sound strip work again.
Omar Emara changed title from VSE missing sound files not detected to Find Missing Files operator corrects the sound file path but the sound strip doesn't work until it is updated 2022-09-26 15:57:27 +02:00

Added subscribers: @mont29, @Sergey

Added subscribers: @mont29, @Sergey

The issue seems to be deeper than the VSE and sound. The "Find Missing Files" operator modifies paths but does not inform the dependency graph about it. I think good solution would be to somehow tag modified IDs with ID_RECALC_SOURCE.

This is a generic file path handling code in the Core. Would be nice to have input from @mont29 to move forward with implementing the tag.

The issue seems to be deeper than the VSE and sound. The "Find Missing Files" operator modifies paths but does not inform the dependency graph about it. I think good solution would be to somehow tag modified IDs with `ID_RECALC_SOURCE`. This is a generic file path handling code in the Core. Would be nice to have input from @mont29 to move forward with implementing the tag.

Indeed depsgraph should be made aware of such changes, will check if I can come with a patch here.

Indeed depsgraph should be made aware of such changes, will check if I can come with a patch here.

This issue was referenced by 1a1341c387

This issue was referenced by 1a1341c38779311ad315c6cd48a62279c7667887

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Bastien Montagne self-assigned this 2022-11-16 18:01:01 +01:00
Bastien Montagne added this to the Core project 2023-02-09 15:43:11 +01:00
Bastien Montagne removed this from the Core project 2023-02-09 18:20:14 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser Project (Legacy)
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#101326
No description provided.